--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -1,15 +1,4 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <title><%=name%></title>
-  <meta name="Country" content="You">
-  <meta name="description" content="Suicides per Population">
-  <meta content="text/html" http-equiv="Content-type" />
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="styles.css">
-</head>
+<%- include ('global/header', {title:name});  %>
 
 <body>
   <header>
@@ -18,8 +7,16 @@
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>Year: <%=stats.year%></li>
-    <li>Frequency: <%=stats.frequency%></li>
+    <li>Year:
+      <% if (stats.year && stats.year.length > 0){ %>
+      <ol>
+        <% stats.year.forEach(function(year){%>
+        <li>Year: <%=stats.year%></li>
+        <li>Frequency: <%=stats.frequency%></li>
+        <%}) %>
+      </ol>
+      <%}%>
+    </li>
   </ul>
   </section>
 
