--- a/src/views/global/footer.ejs
+++ b/src/views/global/footer.ejs
@@ -1,3 +1,7 @@
 <footer>
-  This is my awesome, dynamically inserted footer! Data from <a href="https://www.kaggle.com/gulsahdemiryurek/harry-potter-dataset"> Kaggle - Harry Potter</a>
+  my footer <a href="https://www.kaggle.com/gulsahdemiryurek/harry-potter-dataset"> Kaggle - Harry Potter</a>
 </footer>
+
+</body>
+
+</html>
