--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -7,21 +7,70 @@
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>Year:
-      <% if (stats.year && stats.year.length > 0){ %>
-      <ol>
-        <% stats.year.forEach(function(year){%>
-        <li>Year: <%=stats.year%></li>
-        <li>Frequency: <%=stats.frequency%></li>
-        <%}) %>
-      </ol>
-      <%}%>
-    </li>
+    <li>1960: <%=stats.1960%></li>
+    <li>1961: <%=stats.1961%></li>
+    <li>1962: <%=stats.1962%></li>
+    <li>1963: <%=stats.1963%></li>
+    <li>1964: <%=stats.1964%></li>
+    <li>1965: <%=stats.1965%></li>
+    <li>1966: <%=stats.1966%></li>
+    <li>1967: <%=stats.1967%></li>
+    <li>1968: <%=stats.1968%></li>
+    <li>1969: <%=stats.1969%></li>
+    <li>1970: <%=stats.1970%></li>
+    <li>1971: <%=stats.1971%></li>
+    <li>1972: <%=stats.1972%></li>
+    <li>1973: <%=stats.1973%></li>
+    <li>1974: <%=stats.1974%></li>
+    <li>1975: <%=stats.1975%></li>
+    <li>1976: <%=stats.1976%></li>
+    <li>1977: <%=stats.1977%></li>
+    <li>1978: <%=stats.1978%></li>
+    <li>1979: <%=stats.1979%></li>
+    <li>1980: <%=stats.1980%></li>
+    <li>1981: <%=stats.1981%></li>
+    <li>1982: <%=stats.1982%></li>
+    <li>1983: <%=stats.1983%></li>
+    <li>1984: <%=stats.1984%></li>
+    <li>1985: <%=stats.1985%></li>
+    <li>1986: <%=stats.1986%></li>
+    <li>1987: <%=stats.1987%></li>
+    <li>1988: <%=stats.1988%></li>
+    <li>1989: <%=stats.1989%></li>
+    <li>1990: <%=stats.1990%></li>
+    <li>1991: <%=stats.1991%></li>
+    <li>1992: <%=stats.1992%></li>
+    <li>1993: <%=stats.1993%></li>
+    <li>1994: <%=stats.1994%></li>
+    <li>1995: <%=stats.1995%></li>
+    <li>1996: <%=stats.1996%></li>
+    <li>1997: <%=stats.1997%></li>
+    <li>1998: <%=stats.1998%></li>
+    <li>1999: <%=stats.1999%></li>
+    <li>2000: <%=stats.2000%></li>
+    <li>2001: <%=stats.2001%></li>
+    <li>2002: <%=stats.2002%></li>
+    <li>2003: <%=stats.2003%></li>
+    <li>2004: <%=stats.2004%></li>
+    <li>2005: <%=stats.2005%></li>
+    <li>2006: <%=stats.2006%></li>
+    <li>2007: <%=stats.2007%></li>
+    <li>2008: <%=stats.2008%></li>
+    <li>2009: <%=stats.2009%></li>
+    <li>2010: <%=stats.2010%></li>
+    <li>2011: <%=stats.2011%></li>
+    <li>2012: <%=stats.2012%></li>
+    <li>2013: <%=stats.2013%></li>
+    <li>2014: <%=stats.2014%></li>
+    <li>2015: <%=stats.2015%></li>
+    <li>2016: <%=stats.2016%></li>
+    <li>2017: <%=stats.2017%></li>
+    <li>2018: <%=stats.2018%></li>
+    <li>2019: <%=stats.2019%></li>
+    <li>2020: <%=stats.2020%></li>
   </ul>
   </section>
 
   <%- include ('global/footer');  %>
 
 </body>
-
-</html>
