--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -73,67 +73,67 @@
       <% for(country in data){ %>
       <tr>
         <td><a href="<%=data[country].link%>.html"><%= country %></a></td>
-        <td><%= data[character].1960 %></td>
-        <td><%= data[character].1961 %></td>
-        <td><%= data[character].1962 %></td>
-        <td><%= data[character].1963 %></td>
-        <td><%= data[character].1964 %></td>
-        <td><%= data[character].1965 %></td>
-        <td><%= data[character].1966 %></td>
-        <td><%= data[character].1967 %></td>
-        <td><%= data[character].1968 %></td>
-        <td><%= data[character].1969 %></td>
-        <td><%= data[character].1970 %></td>
-        <td><%= data[character].1971 %></td>
-        <td><%= data[character].1972 %></td>
-        <td><%= data[character].1973 %></td>
-        <td><%= data[character].1974 %></td>
-        <td><%= data[character].1975 %></td>
-        <td><%= data[character].1976 %></td>
-        <td><%= data[character].1977 %></td>
-        <td><%= data[character].1978 %></td>
-        <td><%= data[character].1979 %></td>
-        <td><%= data[character].1980 %></td>
-        <td><%= data[character].1981 %></td>
-        <td><%= data[character].1982 %></td>
-        <td><%= data[character].1983 %></td>
-        <td><%= data[character].1984 %></td>
-        <td><%= data[character].1985 %></td>
-        <td><%= data[character].1986 %></td>
-        <td><%= data[character].1987 %></td>
-        <td><%= data[character].1988 %></td>
-        <td><%= data[character].1989 %></td>
-        <td><%= data[character].1990 %></td>
-        <td><%= data[character].1991 %></td>
-        <td><%= data[character].1992 %></td>
-        <td><%= data[character].1993 %></td>
-        <td><%= data[character].1994 %></td>
-        <td><%= data[character].1995 %></td>
-        <td><%= data[character].1996 %></td>
-        <td><%= data[character].1997 %></td>
-        <td><%= data[character].1998 %></td>
-        <td><%= data[character].1999 %></td>
-        <td><%= data[character].2000 %></td>
-        <td><%= data[character].2001 %></td>
-        <td><%= data[character].2002 %></td>
-        <td><%= data[character].2003 %></td>
-        <td><%= data[character].2004 %></td>
-        <td><%= data[character].2005 %></td>
-        <td><%= data[character].2006 %></td>
-        <td><%= data[character].2007 %></td>
-        <td><%= data[character].2008 %></td>
-        <td><%= data[character].2009 %></td>
-        <td><%= data[character].2010 %></td>
-        <td><%= data[character].2011 %></td>
-        <td><%= data[character].2012 %></td>
-        <td><%= data[character].2013 %></td>
-        <td><%= data[character].2014 %></td>
-        <td><%= data[character].2015 %></td>
-        <td><%= data[character].2016 %></td>
-        <td><%= data[character].2017 %></td>
-        <td><%= data[character].2018 %></td>
-        <td><%= data[character].2019 %></td>
-        <td><%= data[character].2020 %></td>
+        <td><%= data[country].1960 %></td>
+        <td><%= data[country].1961 %></td>
+        <td><%= data[country].1962 %></td>
+        <td><%= data[country].1963 %></td>
+        <td><%= data[country].1964 %></td>
+        <td><%= data[country].1965 %></td>
+        <td><%= data[country].1966 %></td>
+        <td><%= data[country].1967 %></td>
+        <td><%= data[country].1968 %></td>
+        <td><%= data[country].1969 %></td>
+        <td><%= data[country].1970 %></td>
+        <td><%= data[country].1971 %></td>
+        <td><%= data[country].1972 %></td>
+        <td><%= data[country].1973 %></td>
+        <td><%= data[country].1974 %></td>
+        <td><%= data[country].1975 %></td>
+        <td><%= data[country].1976 %></td>
+        <td><%= data[country].1977 %></td>
+        <td><%= data[country].1978 %></td>
+        <td><%= data[country].1979 %></td>
+        <td><%= data[country].1980 %></td>
+        <td><%= data[country].1981 %></td>
+        <td><%= data[country].1982 %></td>
+        <td><%= data[country].1983 %></td>
+        <td><%= data[country].1984 %></td>
+        <td><%= data[country].1985 %></td>
+        <td><%= data[country].1986 %></td>
+        <td><%= data[country].1987 %></td>
+        <td><%= data[country].1988 %></td>
+        <td><%= data[country].1989 %></td>
+        <td><%= data[country].1990 %></td>
+        <td><%= data[country].1991 %></td>
+        <td><%= data[country].1992 %></td>
+        <td><%= data[country].1993 %></td>
+        <td><%= data[country].1994 %></td>
+        <td><%= data[country].1995 %></td>
+        <td><%= data[country].1996 %></td>
+        <td><%= data[country].1997 %></td>
+        <td><%= data[country].1998 %></td>
+        <td><%= data[country].1999 %></td>
+        <td><%= data[country].2000 %></td>
+        <td><%= data[country].2001 %></td>
+        <td><%= data[country].2002 %></td>
+        <td><%= data[country].2003 %></td>
+        <td><%= data[country].2004 %></td>
+        <td><%= data[country].2005 %></td>
+        <td><%= data[country].2006 %></td>
+        <td><%= data[country].2007 %></td>
+        <td><%= data[country].2008 %></td>
+        <td><%= data[country].2009 %></td>
+        <td><%= data[country].2010 %></td>
+        <td><%= data[country].2011 %></td>
+        <td><%= data[country].2012 %></td>
+        <td><%= data[country].2013 %></td>
+        <td><%= data[country].2014 %></td>
+        <td><%= data[country].2015 %></td>
+        <td><%= data[country].2016 %></td>
+        <td><%= data[country].2017 %></td>
+        <td><%= data[country].2018 %></td>
+        <td><%= data[country].2019 %></td>
+        <td><%= data[country].2020 %></td>
       </tr>
       <%}%>
     </table>
