--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -7,7 +7,7 @@
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: <%=stats.sixty%></li>
+    <li>1960: <%=stats.("1960")%></li>
     <li>1961: <%=stats.1961%></li>
     <li>1962: <%=stats.1962%></li>
     <li>1963: <%=stats.1963%></li>
