--- a/src/views/global/footer.ejs
+++ b/src/views/global/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-  my footer <a href="https://www.kaggle.com/gulsahdemiryurek/harry-potter-dataset"> Kaggle - Harry Potter</a>
+  This is my awesome, dynamically inserted footer! Data from <a href="https://data.oecd.org/healthstat/suicide-rates.htm"> oecd.org - Suicide Rates</a>
 </footer>
 
 </html>
