FIXING NAMES OF stats. and data.
Chaning form 1960 to sixty all the way thorugh

--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -1,3 +1,5 @@
+<!doctype html>
+<html lang="en">
 <%- include ('global/header', {title:name});  %>
 
 <body>
@@ -7,10 +9,67 @@
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: <%=stats.("1960")%></li>
-    <li>1961: <%=stats.("1961")%></li>
-    
-
+    <li>1960: <%=stats.sixty%></li>
+    <li>1961: <%=stats.sixtyOne%></li>
+    <li>1962: <%=stats.sixtyTwo%></li>
+    <li>1963: <%=stats.sixtyThree%></li>
+    <li>1964: <%=stats.sixtyFour%></li>
+    <li>1965: <%=stats.sixtyFive%></li>
+    <li>1966: <%=stats.sixtySix%></li>
+    <li>1967: <%=stats.sixtySeven%></li>
+    <li>1968: <%=stats.sixtyEight%></li>
+    <li>1969: <%=stats.sixtyNine%></li>
+    <li>1970: <%=stats.seventy%></li>
+    <li>1971: <%=stats.seventyOne%></li>
+    <li>1972: <%=stats.seventyTwo%></li>
+    <li>1973: <%=stats.seventyThree%></li>
+    <li>1974: <%=stats.seventyFour%></li>
+    <li>1975: <%=stats.seventyFive%></li>
+    <li>1976: <%=stats.seventySix%></li>
+    <li>1977: <%=stats.seventySeven%></li>
+    <li>1978: <%=stats.seventyEight%></li>
+    <li>1979: <%=stats.seventyNine%></li>
+    <li>1980: <%=stats.eighty%></li>
+    <li>1981: <%=stats.eightyOne%></li>
+    <li>1982: <%=stats.eightyTwo%></li>
+    <li>1983: <%=stats.eightyThree%></li>
+    <li>1984: <%=stats.eightyFour%></li>
+    <li>1985: <%=stats.eightyFive%></li>
+    <li>1986: <%=stats.eightySix%></li>
+    <li>1987: <%=stats.eightySeven%></li>
+    <li>1988: <%=stats.eightyEight%></li>
+    <li>1989: <%=stats.eightyNine%></li>
+    <li>1990: <%=stats.ninety%></li>
+    <li>1991: <%=stats.ninetyOne%></li>
+    <li>1992: <%=stats.ninetyTwo%></li>
+    <li>1993: <%=stats.ninetyThree%></li>
+    <li>1994: <%=stats.ninetyFour%></li>
+    <li>1995: <%=stats.ninetyFive%></li>
+    <li>1996: <%=stats.ninetySix%></li>
+    <li>1997: <%=stats.ninetySeven%></li>
+    <li>1998: <%=stats.ninetyEight%></li>
+    <li>1999: <%=stats.ninetyNine%></li>
+    <li>2000: <%=stats.zero%></li>
+    <li>2001: <%=stats.one%></li>
+    <li>2002: <%=stats.two%></li>
+    <li>2003: <%=stats.three%></li>
+    <li>2004: <%=stats.four%></li>
+    <li>2005: <%=stats.five%></li>
+    <li>2006: <%=stats.six%></li>
+    <li>2007: <%=stats.seven%></li>
+    <li>2008: <%=stats.eight%></li>
+    <li>2009: <%=stats.nine%></li>
+    <li>2010: <%=stats.ten%></li>
+    <li>2011: <%=stats.eleven%></li>
+    <li>2012: <%=stats.twelve%></li>
+    <li>2013: <%=stats.thirteen%></li>
+    <li>2014: <%=stats.fourteen%></li>
+    <li>2015: <%=stats.fifteen%></li>
+    <li>2016: <%=stats.sixteen%></li>
+    <li>2017: <%=stats.seventy%></li>
+    <li>2018: <%=stats.eighteen%></li>
+    <li>2019: <%=stats.nineteen%></li>
+    <li>2020: <%=stats.twenty%></li>
   </ul>
   </section>
 
