--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,3 +1,5 @@
+<!doctype html>
+<html lang="en">
 <%- include ('global/header', {title:country});  %>
 
 <body>
@@ -73,67 +75,67 @@
       <% for(country in data){ %>
       <tr>
         <td><a href="<%=data[country].link%>.html"><%= country %></a></td>
-        <td><%= data[country].1960 %></td>
-        <td><%= data[country].1961 %></td>
-        <td><%= data[country].1962 %></td>
-        <td><%= data[country].1963 %></td>
-        <td><%= data[country].1964 %></td>
-        <td><%= data[country].1965 %></td>
-        <td><%= data[country].1966 %></td>
-        <td><%= data[country].1967 %></td>
-        <td><%= data[country].1968 %></td>
-        <td><%= data[country].1969 %></td>
-        <td><%= data[country].1970 %></td>
-        <td><%= data[country].1971 %></td>
-        <td><%= data[country].1972 %></td>
-        <td><%= data[country].1973 %></td>
-        <td><%= data[country].1974 %></td>
-        <td><%= data[country].1975 %></td>
-        <td><%= data[country].1976 %></td>
-        <td><%= data[country].1977 %></td>
-        <td><%= data[country].1978 %></td>
-        <td><%= data[country].1979 %></td>
-        <td><%= data[country].1980 %></td>
-        <td><%= data[country].1981 %></td>
-        <td><%= data[country].1982 %></td>
-        <td><%= data[country].1983 %></td>
-        <td><%= data[country].1984 %></td>
-        <td><%= data[country].1985 %></td>
-        <td><%= data[country].1986 %></td>
-        <td><%= data[country].1987 %></td>
-        <td><%= data[country].1988 %></td>
-        <td><%= data[country].1989 %></td>
-        <td><%= data[country].1990 %></td>
-        <td><%= data[country].1991 %></td>
-        <td><%= data[country].1992 %></td>
-        <td><%= data[country].1993 %></td>
-        <td><%= data[country].1994 %></td>
-        <td><%= data[country].1995 %></td>
-        <td><%= data[country].1996 %></td>
-        <td><%= data[country].1997 %></td>
-        <td><%= data[country].1998 %></td>
-        <td><%= data[country].1999 %></td>
-        <td><%= data[country].2000 %></td>
-        <td><%= data[country].2001 %></td>
-        <td><%= data[country].2002 %></td>
-        <td><%= data[country].2003 %></td>
-        <td><%= data[country].2004 %></td>
-        <td><%= data[country].2005 %></td>
-        <td><%= data[country].2006 %></td>
-        <td><%= data[country].2007 %></td>
-        <td><%= data[country].2008 %></td>
-        <td><%= data[country].2009 %></td>
-        <td><%= data[country].2010 %></td>
-        <td><%= data[country].2011 %></td>
-        <td><%= data[country].2012 %></td>
-        <td><%= data[country].2013 %></td>
-        <td><%= data[country].2014 %></td>
-        <td><%= data[country].2015 %></td>
-        <td><%= data[country].2016 %></td>
-        <td><%= data[country].2017 %></td>
-        <td><%= data[country].2018 %></td>
-        <td><%= data[country].2019 %></td>
-        <td><%= data[country].2020 %></td>
+        <td><%= data[country].sixty %></td>
+        <td><%= data[country].sixtyOne %></td>
+        <td><%= data[country].sixtyTwo %></td>
+        <td><%= data[country].sixtyThree %></td>
+        <td><%= data[country].sixtyFour %></td>
+        <td><%= data[country].sixtyFive %></td>
+        <td><%= data[country].sixtySix %></td>
+        <td><%= data[country].sixtySeven %></td>
+        <td><%= data[country].sixtyEight %></td>
+        <td><%= data[country].sixtyNine %></td>
+        <td><%= data[country].seventy %></td>
+        <td><%= data[country].seventyOne %></td>
+        <td><%= data[country].seventyTwo %></td>
+        <td><%= data[country].seventyThree %></td>
+        <td><%= data[country].seventyFour %></td>
+        <td><%= data[country].seventyFive %></td>
+        <td><%= data[country].seventySix %></td>
+        <td><%= data[country].seventySeven %></td>
+        <td><%= data[country].seventyEight %></td>
+        <td><%= data[country].seventyNine %></td>
+        <td><%= data[country].eighty %></td>
+        <td><%= data[country].eightyOne %></td>
+        <td><%= data[country].eightyTwo %></td>
+        <td><%= data[country].eightyThree %></td>
+        <td><%= data[country].eightyFour %></td>
+        <td><%= data[country].eightyFive %></td>
+        <td><%= data[country].eightySix %></td>
+        <td><%= data[country].eightySeven %></td>
+        <td><%= data[country].eightyEight %></td>
+        <td><%= data[country].eightyNine %></td>
+        <td><%= data[country].ninety %></td>
+        <td><%= data[country].ninetyOne %></td>
+        <td><%= data[country].ninetyTwo %></td>
+        <td><%= data[country].ninetyThree %></td>
+        <td><%= data[country].ninetyFour %></td>
+        <td><%= data[country].ninetyFive %></td>
+        <td><%= data[country].ninetySix %></td>
+        <td><%= data[country].ninetySeven %></td>
+        <td><%= data[country].ninetyEighty %></td>
+        <td><%= data[country].ninetyNine %></td>
+        <td><%= data[country].zero %></td>
+        <td><%= data[country].one %></td>
+        <td><%= data[country].two %></td>
+        <td><%= data[country].three %></td>
+        <td><%= data[country].four %></td>
+        <td><%= data[country].five %></td>
+        <td><%= data[country].six %></td>
+        <td><%= data[country].seven %></td>
+        <td><%= data[country].eight %></td>
+        <td><%= data[country].nine %></td>
+        <td><%= data[country].ten %></td>
+        <td><%= data[country].eleven %></td>
+        <td><%= data[country].twelve %></td>
+        <td><%= data[country].thirteen %></td>
+        <td><%= data[country].fourteen %></td>
+        <td><%= data[country].fifteen %></td>
+        <td><%= data[country].sixteen %></td>
+        <td><%= data[country].seventeen %></td>
+        <td><%= data[country].eighteen %></td>
+        <td><%= data[country].nineteen %></td>
+        <td><%= data[country].twenty %></td>
       </tr>
       <%}%>
     </table>
