--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -111,7 +111,7 @@
         <td><%= data[country].ninetyFive %></td>
         <td><%= data[country].ninetySix %></td>
         <td><%= data[country].ninetySeven %></td>
-        <td><%= data[country].ninetyEighty %></td>
+        <td><%= data[country].ninetyEight %></td>
         <td><%= data[country].ninetyNine %></td>
         <td><%= data[country].zero %></td>
         <td><%= data[country].one %></td>
