adding reasoning from json

--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -68,6 +68,7 @@
     <li>2018: <%=stats.eighteen%></li>
     <li>2019: <%=stats.nineteen%></li>
     <li>2020: <%=stats.twenty%></li>
+    <li>Historical Background: <%=stats.TOT%></li>
   </ul>
   </section>
 
