--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -69,6 +69,9 @@
     <li>2019: <%=stats.nineteen%></li>
     <li>2020: <%=stats.twenty%></li>
     <li>Historical Background: <%=stats.TOT%></li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: <%=stats.SUICIDE%></li>
+    <li>Macro Average across all countries during 1960-2020: <%=stats.PER%></li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: <%=stats.A%></li>
   </ul>
   </section>
 
