--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,8 +9,8 @@
       var data = [{
           type: 'choropleth',
           locationmode: 'country names',
-          locations: ["Australia","Argentina","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland"],
-          z: [8,8,8,8,8,8,8,8],
+          locations: ["Australia","Argentina","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland","Chile","Columbia","Costa Rica","Czech Republic","Germany","Denmark","Spain","Estonia","Finland","France","United Kingdom","Greece","Croatia","Hungary","Ireland","Iceland","Israel","Italy","Japan","South Korea","Lithuania","Luxembourg","Latvia","Mexico","Netherlands","Norway","New Zealand","Peru","Poland","Portual","Romania","Russia","Slovakia","Slovenia","Sweden","Turkey","United States","South Africa"],
+          z: [],
           zmax: 25,
           zmin: 7,
           autocolorscale: true
