--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -59,7 +59,7 @@
     <p>Cultural[privacy]- The rates are related only to countries and not specific cities or neighborhoods, so privacy is ensured.</p>
     <h4>Elements selected:</h4>
     <p>Hyperlinking the websites we will get our information from for the probable causes.</p>
-    <img src="projectPipelineLucidChart.png" alt="Project Pipeline Graphic" height=200px>
+    <img src="newProjectPipeline.png" alt="Project Pipeline Graphic" height=200px>
     <h5>Descriptions of our pipeline:</h5>
     <p>We first brainstormed on what topic we wanted to cover and then looked to find csv files we could use.</p>
     <p>We made our sketches of what we wanted the website to look like and discussed the pros and cons to each design.</p>
@@ -69,9 +69,9 @@
     <p>Then we will use EJS to dynamically insert our data onto our webpage.</p>
     <p>We plan on using the plotly software Specifically a dynamic countries map that uses shades of colors to represent density of a variable.</p>
     <h5>Division of labor:</h5>
-    <p>Solomon: Navbar and use bootstrap combined with ploty to implement the baseline micro and macro views of the world.</p>
-    <p>Nicole: siteGenerator.js, learn how to make drop down menus, create all clickable links, specifically on each country (once they have been implemented)</p>
-    <p>Solomon+Nicole: Clean up the UI and use CSS/Bootstrap to make it appear neat for the final presentation</p>
+    <p>Solomon: generateJSON.js, Build Pipeline, Deploy, Navbar, Macro View, Map, index.ejs, countries.ejs</p>
+    <p>Nicole: siteGenerator.js, drop down menus, micro pages, global folder, home (index) button.</p>
+    <p>Solomon+Nicole: CSS/bootstrap done together</p>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
