--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include ('global/header', {title:country});  %>
-<%- include ('global/navbar', {title:country});  %>
+<%- include ('global/navbar');  %>
 <body>
   <header>
     <h1>Suicides Per Population from 1960 to 2020 Index Page</h1>
