--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,5 +1,5 @@
 <%- include ('global/header', {title:country});  %>
-<%- include ('global/navbar');  %>
+<%- include ('global/navbar', {title:country});  %>
 
 <body>
     <h1>About page</h1>
