--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -1,6 +1,5 @@
 <%- include ('global/header', {title:name});  %>
-<%- include ('global/navbar');  %>
-<body>
+<%- include ('global/navbar', {title:name});  %>
   <header>
     <h1><%=name%></h1>
   </header>
