--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -3,6 +3,14 @@
 <body>
   <header>
     <h1><%=name%></h1>
+    <div id='plotly2'></div>
+    <script>
+        var data = [{
+        x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
+        y: [<%=stats.sixty%>, <%=stats.sixtyOne%>, <%=stats.sixtyTwo%>,<%=stats.sixtyThree%>,<%=stats.sixtyFour%>,<%=stats.sixtyFive%>,<%=stats.sixtySix%>,<%=stats.sixtySeven%>,<%=stats.sixtyEight%>,<%=stats.sixtyNine%>,<%=stats.seventy%>,<%=stats.seventyOne%>,<%=stats.seventyTwo%>,<%=stats.seventyThree%>,<%=stats.seventyFour%>,<%=stats.seventyFive%>,<%=stats.seventySix%>,<%=stats.seventySeven%>,<%=stats.seventyEight%>,<%=stats.seventyNine%>,<%=stats.eighty%>,<%=stats.eightyOne%>,<%=stats.eightyTwo%>,<%=stats.eightyThree%>,<%=stats.eightyFour%>,<%=stats.eightyFive%>,<%=stats.eightySix%>,<%=stats.eightySeven%>,<%=stats.eightyEight%>,<%=stats.eightyNine%>,<%=stats.ninety%>,<%=stats.ninetyOne%>,<%=stats.ninetyTwo%>,<%=stats.ninetyThree%>,<%=stats.ninetyFour%>,<%=stats.ninetyFive%>,<%=stats.ninetySix%>,<%=stats.ninetySeven%>,<%=stats.ninetyEight%>,<%=stats.ninetyNine%>,<%=stats.zero%>,<%=stats.one%>,<%=stats.two%>,<%=stats.three%>,<%=stats.four%>,<%=stats.five%>,<%=stats.six%>,<%=stats.seven%>,<%=stats.eight%>,<%=stats.nine%>,<%=stats.ten%>,<%=stats.eleven%>,<%=stats.twelve%>,<%=stats.thirteen%>,<%=stats.fourteen%>,<%=stats.fifteen%>,<%=stats.sixteen%>,<%=stats.seventeen%>,<%=stats.eighteen%>,<%=stats.nineteen%>,<%=stats.twenty%>],
+        type: 'scatter'}];
+        Plotly.newPlot('plotly2', data);
+    </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
