Micro Pages Graphs

--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -1,5 +1,5 @@
 <%- include ('global/header', {title:name});  %>
-<%- include ('global/navbar', {title:name});  %>
+<body>
   <header>
     <h1><%=name%></h1>
     <div id='plotly2'></div>
