--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -1,4 +1,5 @@
 <%- include ('global/header', {title:name});  %>
+<%- include ('global/navbar', {title:name});  %>
 <body>
   <header>
     <h1><%=name%></h1>
