--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -1,7 +1,8 @@
-<%- include ('global/header', {title:name});  %>
+<%- include ('global/header');  %>
+<%- include ('global/navbar');  %>
 <body>
   <header>
-    <h1><%=name%></h1>
+    <h1><%=country%></h1>
     <div id='plotly2'></div>
     <script>
         var data = [{
