--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,4 +1,5 @@
-<%- include ('global/header', {title:country});  %>
+<%- include ('global/header');  %>
+<%- include ('global/navbar');  %>
 <body>
     <h1>About page</h1>
     <h1>Suicides Per Population and Probable Cause</h1>
