--- a/src/views/countries.ejs
+++ b/src/views/countries.ejs
@@ -5,81 +5,81 @@
     <h1><%=country%></h1>
     <div id='plotly2'></div>
     <script>
-        var data = [{
+        var stats = [{
         x: [1960, 1961, 1962,1963,1964,1965,1966,1967,1968,1969,1970,1971,1972,1973,1974,1975,1976,1977,1978,1980,1981,1982,1983,1984,1985,1986,1987,1988,1989,1990,1991,1992,1993,1994,1995,1996,1997,1998,1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019,2020],
-        y: [<%=stats.sixty%>, <%=stats.sixtyOne%>, <%=stats.sixtyTwo%>,<%=stats.sixtyThree%>,<%=stats.sixtyFour%>,<%=stats.sixtyFive%>,<%=stats.sixtySix%>,<%=stats.sixtySeven%>,<%=stats.sixtyEight%>,<%=stats.sixtyNine%>,<%=stats.seventy%>,<%=stats.seventyOne%>,<%=stats.seventyTwo%>,<%=stats.seventyThree%>,<%=stats.seventyFour%>,<%=stats.seventyFive%>,<%=stats.seventySix%>,<%=stats.seventySeven%>,<%=stats.seventyEight%>,<%=stats.seventyNine%>,<%=stats.eighty%>,<%=stats.eightyOne%>,<%=stats.eightyTwo%>,<%=stats.eightyThree%>,<%=stats.eightyFour%>,<%=stats.eightyFive%>,<%=stats.eightySix%>,<%=stats.eightySeven%>,<%=stats.eightyEight%>,<%=stats.eightyNine%>,<%=stats.ninety%>,<%=stats.ninetyOne%>,<%=stats.ninetyTwo%>,<%=stats.ninetyThree%>,<%=stats.ninetyFour%>,<%=stats.ninetyFive%>,<%=stats.ninetySix%>,<%=stats.ninetySeven%>,<%=stats.ninetyEight%>,<%=stats.ninetyNine%>,<%=stats.zero%>,<%=stats.one%>,<%=stats.two%>,<%=stats.three%>,<%=stats.four%>,<%=stats.five%>,<%=stats.six%>,<%=stats.seven%>,<%=stats.eight%>,<%=stats.nine%>,<%=stats.ten%>,<%=stats.eleven%>,<%=stats.twelve%>,<%=stats.thirteen%>,<%=stats.fourteen%>,<%=stats.fifteen%>,<%=stats.sixteen%>,<%=stats.seventeen%>,<%=stats.eighteen%>,<%=stats.nineteen%>,<%=stats.twenty%>],
+        y: [<%=stats[country].sixty%>, <%=stats[country].sixtyOne%>, <%=stats[country].sixtyTwo%>,<%=stats[country].sixtyThree%>,<%=stats[country].sixtyFour%>,<%=stats[country].sixtyFive%>,<%=stats[country].sixtySix%>,<%=stats[country].sixtySeven%>,<%=stats[country].sixtyEight%>,<%=stats[country].sixtyNine%>,<%=stats[country].seventy%>,<%=stats[country].seventyOne%>,<%=stats[country].seventyTwo%>,<%=stats[country].seventyThree%>,<%=stats[country].seventyFour%>,<%=stats[country].seventyFive%>,<%=stats[country].seventySix%>,<%=stats[country].seventySeven%>,<%=stats[country].seventyEight%>,<%=stats[country].seventyNine%>,<%=stats[country].eighty%>,<%=stats[country].eightyOne%>,<%=stats[country].eightyTwo%>,<%=stats[country].eightyThree%>,<%=stats[country].eightyFour%>,<%=stats[country].eightyFive%>,<%=stats[country].eightySix%>,<%=stats[country].eightySeven%>,<%=stats[country].eightyEight%>,<%=stats[country].eightyNine%>,<%=stats[country].ninety%>,<%=stats[country].ninetyOne%>,<%=stats[country].ninetyTwo%>,<%=stats[country].ninetyThree%>,<%=stats[country].ninetyFour%>,<%=stats[country].ninetyFive%>,<%=stats[country].ninetySix%>,<%=stats[country].ninetySeven%>,<%=stats[country].ninetyEight%>,<%=stats[country].ninetyNine%>,<%=stats[country].zero%>,<%=stats[country].one%>,<%=stats[country].two%>,<%=stats[country].three%>,<%=stats[country].four%>,<%=stats[country].five%>,<%=stats[country].six%>,<%=stats[country].seven%>,<%=stats[country].eight%>,<%=stats[country].nine%>,<%=stats[country].ten%>,<%=stats[country].eleven%>,<%=stats[country].twelve%>,<%=stats[country].thirteen%>,<%=stats[country].fourteen%>,<%=stats[country].fifteen%>,<%=stats[country].sixteen%>,<%=stats[country].seventeen%>,<%=stats[country].eighteen%>,<%=stats[country].nineteen%>,<%=stats[country].twenty%>],
         type: 'scatter'}];
-        Plotly.newPlot('plotly2', data);
+        Plotly.newPlot('plotly2', stats);
     </script>
   </header>
   <section id="country-stats">
   <h2>Stats</h2>
   <ul>
-    <li>1960: <%=stats.sixty%></li>
-    <li>1961: <%=stats.sixtyOne%></li>
-    <li>1962: <%=stats.sixtyTwo%></li>
-    <li>1963: <%=stats.sixtyThree%></li>
-    <li>1964: <%=stats.sixtyFour%></li>
-    <li>1965: <%=stats.sixtyFive%></li>
-    <li>1966: <%=stats.sixtySix%></li>
-    <li>1967: <%=stats.sixtySeven%></li>
-    <li>1968: <%=stats.sixtyEight%></li>
-    <li>1969: <%=stats.sixtyNine%></li>
-    <li>1970: <%=stats.seventy%></li>
-    <li>1971: <%=stats.seventyOne%></li>
-    <li>1972: <%=stats.seventyTwo%></li>
-    <li>1973: <%=stats.seventyThree%></li>
-    <li>1974: <%=stats.seventyFour%></li>
-    <li>1975: <%=stats.seventyFive%></li>
-    <li>1976: <%=stats.seventySix%></li>
-    <li>1977: <%=stats.seventySeven%></li>
-    <li>1978: <%=stats.seventyEight%></li>
-    <li>1979: <%=stats.seventyNine%></li>
-    <li>1980: <%=stats.eighty%></li>
-    <li>1981: <%=stats.eightyOne%></li>
-    <li>1982: <%=stats.eightyTwo%></li>
-    <li>1983: <%=stats.eightyThree%></li>
-    <li>1984: <%=stats.eightyFour%></li>
-    <li>1985: <%=stats.eightyFive%></li>
-    <li>1986: <%=stats.eightySix%></li>
-    <li>1987: <%=stats.eightySeven%></li>
-    <li>1988: <%=stats.eightyEight%></li>
-    <li>1989: <%=stats.eightyNine%></li>
-    <li>1990: <%=stats.ninety%></li>
-    <li>1991: <%=stats.ninetyOne%></li>
-    <li>1992: <%=stats.ninetyTwo%></li>
-    <li>1993: <%=stats.ninetyThree%></li>
-    <li>1994: <%=stats.ninetyFour%></li>
-    <li>1995: <%=stats.ninetyFive%></li>
-    <li>1996: <%=stats.ninetySix%></li>
-    <li>1997: <%=stats.ninetySeven%></li>
-    <li>1998: <%=stats.ninetyEight%></li>
-    <li>1999: <%=stats.ninetyNine%></li>
-    <li>2000: <%=stats.zero%></li>
-    <li>2001: <%=stats.one%></li>
-    <li>2002: <%=stats.two%></li>
-    <li>2003: <%=stats.three%></li>
-    <li>2004: <%=stats.four%></li>
-    <li>2005: <%=stats.five%></li>
-    <li>2006: <%=stats.six%></li>
-    <li>2007: <%=stats.seven%></li>
-    <li>2008: <%=stats.eight%></li>
-    <li>2009: <%=stats.nine%></li>
-    <li>2010: <%=stats.ten%></li>
-    <li>2011: <%=stats.eleven%></li>
-    <li>2012: <%=stats.twelve%></li>
-    <li>2013: <%=stats.thirteen%></li>
-    <li>2014: <%=stats.fourteen%></li>
-    <li>2015: <%=stats.fifteen%></li>
-    <li>2016: <%=stats.sixteen%></li>
-    <li>2017: <%=stats.seventy%></li>
-    <li>2018: <%=stats.eighteen%></li>
-    <li>2019: <%=stats.nineteen%></li>
-    <li>2020: <%=stats.twenty%></li>
-    <li>Historical Background: <%=stats.TOT%></li>
-    <li>Total suicide deaths throughout 1960-2020 in this country: <%=stats.SUICIDE%></li>
-    <li>Macro Average across all countries during 1960-2020: <%=stats.PER%></li>
-    <li>Qualitative comparison between Macro Average and total suicides in this country: <%=stats.A%></li>
+    <li>1960: <%=stats[country].sixty%></li>
+    <li>1961: <%=stats[country].sixtyOne%></li>
+    <li>1962: <%=stats[country].sixtyTwo%></li>
+    <li>1963: <%=stats[country].sixtyThree%></li>
+    <li>1964: <%=stats[country].sixtyFour%></li>
+    <li>1965: <%=stats[country].sixtyFive%></li>
+    <li>1966: <%=stats[country].sixtySix%></li>
+    <li>1967: <%=stats[country].sixtySeven%></li>
+    <li>1968: <%=stats[country].sixtyEight%></li>
+    <li>1969: <%=stats[country].sixtyNine%></li>
+    <li>1970: <%=stats[country].seventy%></li>
+    <li>1971: <%=stats[country].seventyOne%></li>
+    <li>1972: <%=stats[country].seventyTwo%></li>
+    <li>1973: <%=stats[country].seventyThree%></li>
+    <li>1974: <%=stats[country].seventyFour%></li>
+    <li>1975: <%=stats[country].seventyFive%></li>
+    <li>1976: <%=stats[country].seventySix%></li>
+    <li>1977: <%=stats[country].seventySeven%></li>
+    <li>1978: <%=stats[country].seventyEight%></li>
+    <li>1979: <%=stats[country].seventyNine%></li>
+    <li>1980: <%=stats[country].eighty%></li>
+    <li>1981: <%=stats[country].eightyOne%></li>
+    <li>1982: <%=stats[country].eightyTwo%></li>
+    <li>1983: <%=stats[country].eightyThree%></li>
+    <li>1984: <%=stats[country].eightyFour%></li>
+    <li>1985: <%=stats[country].eightyFive%></li>
+    <li>1986: <%=stats[country].eightySix%></li>
+    <li>1987: <%=stats[country].eightySeven%></li>
+    <li>1988: <%=stats[country].eightyEight%></li>
+    <li>1989: <%=stats[country].eightyNine%></li>
+    <li>1990: <%=stats[country].ninety%></li>
+    <li>1991: <%=stats[country].ninetyOne%></li>
+    <li>1992: <%=stats[country].ninetyTwo%></li>
+    <li>1993: <%=stats[country].ninetyThree%></li>
+    <li>1994: <%=stats[country].ninetyFour%></li>
+    <li>1995: <%=stats[country].ninetyFive%></li>
+    <li>1996: <%=stats[country].ninetySix%></li>
+    <li>1997: <%=stats[country].ninetySeven%></li>
+    <li>1998: <%=stats[country].ninetyEight%></li>
+    <li>1999: <%=stats[country].ninetyNine%></li>
+    <li>2000: <%=stats[country].zero%></li>
+    <li>2001: <%=stats[country].one%></li>
+    <li>2002: <%=stats[country].two%></li>
+    <li>2003: <%=stats[country].three%></li>
+    <li>2004: <%=stats[country].four%></li>
+    <li>2005: <%=stats[country].five%></li>
+    <li>2006: <%=stats[country].six%></li>
+    <li>2007: <%=stats[country].seven%></li>
+    <li>2008: <%=stats[country].eight%></li>
+    <li>2009: <%=stats[country].nine%></li>
+    <li>2010: <%=stats[country].ten%></li>
+    <li>2011: <%=stats[country].eleven%></li>
+    <li>2012: <%=stats[country].twelve%></li>
+    <li>2013: <%=stats[country].thirteen%></li>
+    <li>2014: <%=stats[country].fourteen%></li>
+    <li>2015: <%=stats[country].fifteen%></li>
+    <li>2016: <%=stats[country].sixteen%></li>
+    <li>2017: <%=stats[country].seventy%></li>
+    <li>2018: <%=stats[country].eighteen%></li>
+    <li>2019: <%=stats[country].nineteen%></li>
+    <li>2020: <%=stats[country].twenty%></li>
+    <li>Historical Background: <%=stats[country].TOT%></li>
+    <li>Total suicide deaths throughout 1960-2020 in this country: <%=stats[country].SUICIDE%></li>
+    <li>Macro Average across all countries during 1960-2020: <%=stats[country].PER%></li>
+    <li>Qualitative comparison between Macro Average and total suicides in this country: <%=stats[country].A%></li>
   </ul>
   </section>
 
