Fixing the static values for coutnreis and making the mdynamic
YAYY THIS WORKS

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,10 +9,10 @@
       var data = [{
           type: 'choropleth',
           locationmode: 'country names',
-          locations: ["Australia","Argentina","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland","Chile","Columbia","Costa Rica","Czech Republic","Germany","Denmark","Spain","Estonia","Finland","France","United Kingdom","Greece","Croatia","Hungary","Ireland","Iceland","Israel","Italy","Japan","South Korea","Lithuania","Luxembourg","Latvia","Mexico","Netherlands","Norway","New Zealand","Peru","Poland","Portual","Romania","Russia","Slovakia","Slovenia","Sweden","Turkey","United States","South Africa"],
-          z: [11,7.9,14.4,18.2,10.9,5.6,11.3,12.3,12.3,7,7.2,13.9,11.2,10.1,7,16.2,17.6,16.3,6.7,7,16.9,24.3,10.8,15,7.5,7,21.7,25,25,10.5,20.1,4.9,9.4,11.4,12.4,6,16.3,9.7,12.8,22.8,11.6,19.2,12,6.1,12.8,6.1],
-          zmax: 26,
-          zmin: 6,
+          locations: ["Argentina","Australia","Austria","Belgium","Bulgaria","Brazil","Canada","Switzerland","Chile","Colombia","Costa Rica","Czech Republic","Germany","Denmark","Spain","Estonia","Finland","France","United Kingdom","Greece","Croatia","Hungary","Ireland","Iceland","Israel","Italy","Japan","South Korea","Lithuania","Luxembourg","Latvia","Mexico","Netherlands","Norway","New Zealand","Peru","Poland","Portugal","Romania","Russia","Slovakia","Slovenia","Sweden","Turkey","United States","South Africa"],
+          z: [<%=stats["ARG"].ten%>,<%=stats["AUS"].ten%>,<%=stats["AUT"].ten%>,<%=stats["BEL"].ten%>,<%=stats["BGR"].ten%>,<%=stats["BRA"].ten%>,<%=stats["CAN"].ten%>,<%=stats["CHE"].ten%>,<%=stats["CHL"].ten%>,<%=stats["COL"].ten%>,<%=stats["CRI"].ten%>,<%=stats["CZE"].ten%>,<%=stats["DEU"].ten%>,<%=stats["DNK"].ten%>,<%=stats["ESP"].ten%>,<%=stats["EST"].ten%>,<%=stats["FIN"].ten%>,<%=stats["FRA"].ten%>,<%=stats["GBR"].ten%>,<%=stats["GRC"].ten%>,<%=stats["HRV"].ten%>,<%=stats["HUN"].ten%>,<%=stats["IRL"].ten%>,<%=stats["ISL"].ten%>,<%=stats["ISR"].ten%>,<%=stats["ITA"].ten%>,<%=stats["JPN"].ten%>,<%=stats["KOR"].ten%>,<%=stats["LTU"].ten%>,<%=stats["LUX"].ten%>,<%=stats["LVA"].ten%>,<%=stats["MEX"].ten%>,<%=stats["NLD"].ten%>,<%=stats["NOR"].ten%>,<%=stats["NZL"].ten%>,<%=stats["PER"].ten%>,<%=stats["POL"].ten%>,<%=stats["PRT"].ten%>,<%=stats["ROU"].ten%>,<%=stats["RUS"].ten%>,<%=stats["SVK"].ten%>,<%=stats["SVN"].ten%>,<%=stats["SWE"].ten%>,<%=stats["TUR"].ten%>,<%=stats["USA"].ten%>,<%=stats["ZAF"].ten%>],
+          zmax: 35,
+          zmin: 1,
           autocolorscale: true
       }];
       var layout = {
